# Atlas

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  LICENSE  MODULE.bazel  README.md  README_CN.md  deps.bzl
runtime/: BUILD.bazel  atlas_server.runtimeconfig.json  atlas_server.runtimeconfig.json.in
src/client/: BUILD.bazel  CMakeLists.txt  client_app.cc  client_app.cpp  client_app.h  client_app.hpp  client_native_provider.cc  client_native_provider.cpp  client_native_provider.h  client_native_provider.hpp  main.cc  main.cpp
src/csharp/Atlas.Generators.Events/: Atlas.Generators.Events.csproj  BUILD.bazel  EventDiagnosticDescriptors.cs  EventGenerator.cs  EventTypeHelper.cs
src/csharp/Atlas.Runtime/: AssemblyInfo.cs  Atlas.Runtime.csproj  BUILD.bazel
src/csharp/Atlas.Shared/: Atlas.Shared.csproj  BUILD.bazel
src/lib/: BUILD.bazel  CMakeLists.txt
src/lib/chunk/: BUILD.bazel  CMakeLists.txt
src/lib/clrscript/: BUILD.bazel  CMakeLists.txt  base_native_provider.cc  base_native_provider.cpp  base_native_provider.h  base_native_provider.hpp  clr_bootstrap.cc  clr_bootstrap.cpp  clr_bootstrap.h  clr_bootstrap.hpp  clr_error.cc  clr_error.cpp  clr_error.h  clr_error.hpp  clr_export.h  clr_export.hpp  clr_host.cc  clr_host.cpp  clr_host.h  clr_host.hpp  clr_host_linux.cc  clr_host_linux.cpp  clr_host_windows.cc  clr_host_windows.cpp  clr_hot_reload.cc  clr_hot_reload.cpp  clr_hot_reload.h  clr_hot_reload.hpp  clr_invoke.h  clr_invoke.hpp  clr_marshal.cc  clr_marshal.cpp  clr_marshal.h  clr_marshal.hpp  clr_native_api.cc  clr_native_api.cpp  clr_native_api.h  clr_native_api.hpp  clr_native_api_defs.h  clr_native_api_defs.hpp  (+22 more)
src/lib/connection/: BUILD.bazel  CMakeLists.txt
src/lib/coro/: BUILD.bazel  CMakeLists.txt  async_sleep.h  async_sleep.hpp  await_bg_task.h  await_bg_task.hpp  cancellation.h  cancellation.hpp  entity_rpc_reply.h  fire_and_forget.h  fire_and_forget.hpp  pending_rpc_registry.cc  pending_rpc_registry.cpp  pending_rpc_registry.h  pending_rpc_registry.hpp  rpc_call.h  rpc_call.hpp  scope_guard.h  scope_guard.hpp  task.h  task.hpp
src/lib/db/: BUILD.bazel  CMakeLists.txt  database_factory.cc  database_factory.cpp  database_factory.h  database_factory.hpp  db_export.h  idatabase.h  idatabase.hpp
src/lib/db_mysql/: BUILD.bazel  CMakeLists.txt
src/lib/db_sqlite/: BUILD.bazel  CMakeLists.txt  sqlite_database.cc  sqlite_database.cpp  sqlite_database.h  sqlite_database.hpp  sqlite_database_plugin.cc
src/lib/db_xml/: BUILD.bazel  CMakeLists.txt  xml_database.cc  xml_database.cpp  xml_database.h  xml_database.hpp  xml_database_plugin.cc
src/lib/entitydef/: BUILD.bazel  CMakeLists.txt  entity_def_registry.cc  entity_def_registry.cpp  entity_def_registry.h  entity_def_registry.hpp  entity_type_descriptor.h  entity_type_descriptor.hpp  struct_descriptor.h
src/lib/foundation/: BUILD.bazel  CMakeLists.txt  atlas_common.h  callback_utils.h  callback_utils.hpp  clock.cc  clock.h  error.cc  error.cpp  error.h  error.hpp  heap.cc  heap.h  intrusive_ptr.h  intrusive_ptr.hpp  latency_histogram.cc  latency_histogram.h  log.cc  log.cpp  log.h  log.hpp  log_sinks.cc  log_sinks.cpp  log_sinks.h  log_sinks.hpp  memory_tracker.cc  memory_tracker.cpp  memory_tracker.h  memory_tracker.hpp  pool_allocator.cc  pool_allocator.cpp  pool_allocator.h  pool_allocator.hpp  process_type.cc  process_type.h  profiler.cc  profiler.h  ref_counted.h  ref_counted.hpp  runtime.cc  (+13 more)
src/lib/math/: BUILD.bazel  CMakeLists.txt  math_types.h  math_types.hpp  matrix4.cc  matrix4.cpp  matrix4.h  matrix4.hpp  quaternion.cc  quaternion.cpp  quaternion.h  quaternion.hpp  vector2.h  vector2.hpp  vector3.h  vector3.hpp  vector4.h  vector4.hpp
src/lib/net_client/: CMakeLists.txt  client_api.cc  client_api.h  client_session.cc  client_session.h  net_client_export.h
src/lib/network/: BUILD.bazel  CMakeLists.txt  address.cc  address.cpp  address.h  address.hpp  bg_task_manager.cc  bg_task_manager.cpp  bg_task_manager.h  bg_task_manager.hpp  bundle.cc  bundle.cpp  bundle.h  bundle.hpp  channel.cc  channel.cpp  channel.h  channel.hpp  compression_filter.cc  compression_filter.cpp  compression_filter.h  compression_filter.hpp  event_dispatcher.cc  event_dispatcher.cpp  event_dispatcher.h  event_dispatcher.hpp  frequent_task.h  frequent_task.hpp  message.h  (+35 more)
src/server/: BUILD.bazel  CMakeLists.txt
tests/: BUILD.bazel  CMakeLists.txt
tests/csharp/: CMakeLists.txt
tests/integration/: BUILD.bazel  CMakeLists.txt  atdf_account_fixture.h  fake_cluster.cc  fake_cluster.h  fake_cluster_capi.cc  fake_cluster_capi.h  test_aoi_hysteresis_churn.cpp  test_aoi_visibility.cpp  test_baseappmgr_registration.cpp  test_cellapp_integration.cpp  test_cellappmgr_integration.cpp  test_cellappmgr_process.cpp  test_client_flow.cpp  test_dbapp_checkout_cleanup.cpp  test_dbapp_login_flow.cpp  test_distributed_space.cpp  test_hot_reload.cpp  test_login_flow.cpp  test_machined_registration.cpp  test_offload_traversal.cpp  test_rudp_two_network_interfaces.cpp  test_tcp_echo_roundtrip.cpp
tests/unit/: BUILD.bazel  CMakeLists.txt  bazel_test_paths.h  test_address.cpp  test_aoi_trigger_hysteresis.cpp  test_atlas_module.cpp  test_base_entity.cpp  test_baseapp_cell_routing.cpp  test_baseapp_messages.cpp  test_baseappmgr_messages.cpp  test_bg_task_manager.cpp  test_binary_stream.cpp  test_bsp_tree.cpp  test_bundle.cpp  test_cell.cpp  test_cell_entity.cpp  test_cellapp_config.cpp  test_cellapp_handlers.cpp  test_cellapp_messages.cpp  test_cellapp_native_provider.cpp  test_cellappmgr.cpp  test_cellappmgr_messages.cpp  test_channel.cpp  test_checkout_manager.cpp  test_child_process.cpp  test_client_event_tap.cpp  test_clr_callback.cpp  test_clr_error.cpp  test_clr_host.cpp  test_clr_invoke.cpp  test_clr_marshal.cpp  test_clr_object.cpp  test_clr_script_engine.cpp  test_compression_filter.cpp  test_containers.cpp  test_controller_codec.cpp  test_controllers.cpp  test_coro_bridge.cpp  test_coro_rpc.cpp  test_coro_sleep.cpp  (+83 more)
(+796 files in other folders)
