module(
    name = "atlas",
    version = "0.1.0",
)

# C++ rules
bazel_dep(name = "rules_cc", version = "0.0.9")

# Platform constraints (for select() on OS/CPU)
bazel_dep(name = "platforms", version = "0.0.10")

# Google Test — used by all cc_test targets
# Note: project uses 1.15.2 via FetchContent; BCR carries 1.14.0.
# When 1.15.x lands in BCR, bump this version.
bazel_dep(name = "googletest", version = "1.14.0")

# C# / .NET rules — for atlas_clrscript and C# tests (Phase 6)
# bazel_dep(name = "rules_dotnet", version = "0.17.0")

# pugixml, rapidjson, zlib, sqlite3 — not in BCR or need custom BUILD,
# declared via module extension
atlas_deps = use_extension("//:deps.bzl", "atlas_deps")
use_repo(atlas_deps, "pugixml", "rapidjson", "zlib", "sqlite3", "dotnet_host")

# ── Developer tooling ────────────────────────────────────────────────────────
# Hedron's compile_commands.json extractor for clangd / VS Code IntelliSense
# Usage: bazel run :refresh_compile_commands
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
