# src/client/BUILD.bazel
#
# atlas_client — console client application with embedded CLR

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "atlas_client_lib",
    srcs = [
        "client_app.cc",
        "client_native_provider.cc",
    ],
    hdrs = glob(["*.h"]),
    deps = [
        "//src/lib/clrscript:atlas_clrscript",
        "//src/lib/db:atlas_db",
        "//src/lib/entitydef:atlas_entitydef",
        "//src/lib/foundation:atlas_foundation",
        "//src/lib/network:atlas_network",
        "//src/lib/platform:atlas_platform",
        "//src/lib/serialization:atlas_serialization",
        "//src/lib/server:atlas_server",
        # Cross-server message headers
        "//src/server/baseapp:atlas_baseapp_lib",
        "//src/server/loginapp:atlas_loginapp_lib",
    ],
)

cc_binary(
    name = "atlas_client",
    srcs = ["main.cc"],
    deps = [":atlas_client_lib"],
)
